2011-11-12  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Move list of DFG source files into correct file
        https://bugs.webkit.org/show_bug.cgi?id=72212

        Reviewed by Daniel Bates.

        The DFG files are platform independent. So move them from
        the EFL specific file into the general CMakeLists.txt.

        * CMakeLists.txt:
        * PlatformEfl.cmake:

2011-11-12  Patrick Gansterer  <paroga@webkit.org>

        Fix "unused variable" warning in JSLock
        https://bugs.webkit.org/show_bug.cgi?id=72213

        Reviewed by Anders Carlsson.

        Use ASSERT_UNUSED() instead of ASSERT() to make sure
        that the variable is also used in the release build.

        * runtime/JSLock.cpp:
        (JSC::JSLock::lock):
        (JSC::JSLock::unlock):

2011-11-11  Gavin Barraclough  <barraclough@apple.com>

        Update iOS compiler version.

        Reviewed by David Kilzer.

        * Configurations/CompilerVersion.xcconfig:
            - Update compiler version.

2011-11-11  Gavin Barraclough  <barraclough@apple.com>

        Update iOS port's configuration setting, particularly in Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=72187
        
        Reviewed by David Kilzer.

        * interpreter/Interpreter.h:
            - Lower the reentry depth.
        * runtime/DatePrototype.cpp:
            - iOS also uses CF.
        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::IncrementalScavenge):
            - Update fastmalloc configuration for iOS.
        * wtf/OSAllocatorPosix.cpp:
        (WTF::OSAllocator::reserveAndCommit):
            - Added flag.
        * wtf/Platform.h:
            - Update platform configuration for iOS.

2011-11-11  David Kilzer  <ddkilzer@apple.com>

        Only define BUILDING_ON_* and TARGETING_* macros when building for Mac OS X
        <http://webkit.org/b/72175>

        Reviewed by Joseph Pecoraro.

        * wtf/Platform.h: Move the definition of the BUILDING_ON_* and