@@ -1,5 +1,12 @@
 2011-11-12  Patrick Gansterer  <paroga@webkit.org>
 
+        Unreviewed. Add ENABLE(DFG_JIT) around DFGCorrectableJumpPoint code.
+
+        * dfg/DFGCorrectableJumpPoint.cpp:
+        * dfg/DFGCorrectableJumpPoint.h:
+
+2011-11-12  Patrick Gansterer  <paroga@webkit.org>
+
         [CMake] Move list of DFG source files into correct file
         https://bugs.webkit.org/show_bug.cgi?id=72212
 
